--- a/release.properties
+++ b/release.properties
@@ -1,63 +1,63 @@
 #release configuration
-#Wed Jul 23 10:39:42 CEST 2014
+#Wed Jul 23 11:44:39 CEST 2014
 project.scm.org.purl.wf4ever.astrotaverna\:perspective-myexperiment-astropack.empty=true
-project.rel.org.purl.wf4ever.astrotaverna\:Image-activity=1.13
+project.rel.org.purl.wf4ever.astrotaverna\:Image-activity=1.14
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna-utils.empty=true
 completedPhase=end-release
-project.dev.org.purl.wf4ever.astrotaverna\:file-reference-builder=1.14-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:file-reference-builder=1.15-SNAPSHOT
 scm.username=git
-project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna=1.14-SNAPSHOT
-project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-voservices=1.13
-project.dev.org.purl.wf4ever.astrotaverna\:PDL-activity-ui=1.14-SNAPSHOT
-project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-workbench-test=1.14-SNAPSHOT
-project.rel.org.purl.wf4ever.astrotaverna\:perspective-myexperiment-astropack=1.13
+project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna=1.15-SNAPSHOT
+project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-voservices=1.14
+project.dev.org.purl.wf4ever.astrotaverna\:PDL-activity-ui=1.15-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-workbench-test=1.15-SNAPSHOT
+project.rel.org.purl.wf4ever.astrotaverna\:perspective-myexperiment-astropack=1.14
 exec.snapshotReleasePluginAllowed=false
-scm.tag=1.13
+scm.tag=astrotaverna-1.14
 project.scm.org.purl.wf4ever.astrotaverna\:Image-activity-ui.empty=true
-project.dev.org.purl.wf4ever.astrotaverna\:stilts-activity=1.14-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:stilts-activity=1.15-SNAPSHOT
 project.scm.org.purl.wf4ever.astrotaverna\:Image-activity.empty=true
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna-vo-repository.empty=true
 project.scm.org.purl.wf4ever.astrotaverna\:votable-renderer.empty=true
 project.scm.org.purl.wf4ever.astrotaverna\:stilts-activity-ui.empty=true
-project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-plugin=1.14-SNAPSHOT
-project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-vo-repository=1.13
-project.dev.org.purl.wf4ever.astrotaverna\:stilts-activity-ui=1.14-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-plugin=1.15-SNAPSHOT
+project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-vo-repository=1.14
+project.dev.org.purl.wf4ever.astrotaverna\:stilts-activity-ui=1.15-SNAPSHOT
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna-workbench-test.empty=true
-project.rel.org.purl.wf4ever.astrotaverna\:stilts-activity-ui=1.13
-project.rel.org.purl.wf4ever.astrotaverna\:PDL-activity=1.13
-project.dev.org.purl.wf4ever.astrotaverna\:query-activity-ui=1.14-SNAPSHOT
-project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-voservices=1.14-SNAPSHOT
-project.dev.org.purl.wf4ever.astrotaverna\:Image-activity=1.14-SNAPSHOT
-project.scm.org.purl.wf4ever.astrotaverna\:file-reference-builder.empty=true
+project.rel.org.purl.wf4ever.astrotaverna\:stilts-activity-ui=1.14
+project.rel.org.purl.wf4ever.astrotaverna\:PDL-activity=1.14
+project.dev.org.purl.wf4ever.astrotaverna\:query-activity-ui=1.15-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-voservices=1.15-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:Image-activity=1.15-SNAPSHOT
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna.connection=scm\:git\:git\://github.com/CANUBE/astrotaverna.git
+project.scm.org.purl.wf4ever.astrotaverna\:file-reference-builder.empty=true
 remoteTagging=true
 scm.url=scm\:git\:git@github.com\:CANUBE/astrotaverna.git
 scm.commentPrefix=[maven-release-plugin] 
 project.scm.org.purl.wf4ever.astrotaverna\:query-activity-ui.empty=true
-project.rel.org.purl.wf4ever.astrotaverna\:query-activity-ui=1.13
-project.rel.org.purl.wf4ever.astrotaverna\:file-reference-builder=1.13
-project.rel.org.purl.wf4ever.astrotaverna\:PDL-activity-ui=1.13
+project.rel.org.purl.wf4ever.astrotaverna\:query-activity-ui=1.14
+project.rel.org.purl.wf4ever.astrotaverna\:file-reference-builder=1.14
+project.rel.org.purl.wf4ever.astrotaverna\:PDL-activity-ui=1.14
 project.scm.org.purl.wf4ever.astrotaverna\:PDL-activity.empty=true
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna.tag=astrotaverna-1.12
-project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-utils=1.14-SNAPSHOT
-project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-utils=1.13
-project.rel.org.purl.wf4ever.astrotaverna\:stilts-activity=1.13
+project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-utils=1.15-SNAPSHOT
+project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-utils=1.14
+project.rel.org.purl.wf4ever.astrotaverna\:stilts-activity=1.14
 pushChanges=true
-project.dev.org.purl.wf4ever.astrotaverna\:Image-activity-ui=1.14-SNAPSHOT
-project.dev.org.purl.wf4ever.astrotaverna\:votable-renderer=1.14-SNAPSHOT
-project.dev.org.purl.wf4ever.astrotaverna\:PDL-activity=1.14-SNAPSHOT
-project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna=1.13
-project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-plugin=1.13
+project.dev.org.purl.wf4ever.astrotaverna\:Image-activity-ui=1.15-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:votable-renderer=1.15-SNAPSHOT
+project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna=1.14
+project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-plugin=1.14
+project.dev.org.purl.wf4ever.astrotaverna\:PDL-activity=1.15-SNAPSHOT
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna-voservices.empty=true
-project.dev.org.purl.wf4ever.astrotaverna\:perspective-myexperiment-astropack=1.14-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:perspective-myexperiment-astropack=1.15-SNAPSHOT
 preparationGoals=clean verify
 project.scm.org.purl.wf4ever.astrotaverna\:PDL-activity-ui.empty=true
-project.rel.org.purl.wf4ever.astrotaverna\:Image-activity-ui=1.13
-project.rel.org.purl.wf4ever.astrotaverna\:votable-renderer=1.13
+project.rel.org.purl.wf4ever.astrotaverna\:votable-renderer=1.14
+project.rel.org.purl.wf4ever.astrotaverna\:Image-activity-ui=1.14
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 project.scm.org.purl.wf4ever.astrotaverna\:stilts-activity.empty=true
-project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-workbench-test=1.13
-project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-vo-repository=1.14-SNAPSHOT
+project.dev.org.purl.wf4ever.astrotaverna\:astrotaverna-vo-repository=1.15-SNAPSHOT
+project.rel.org.purl.wf4ever.astrotaverna\:astrotaverna-workbench-test=1.14
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna.url=https\://github.com/CANUBE/astrotaverna.git
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna.developerConnection=scm\:git\:git@github.com\:CANUBE/astrotaverna.git
 project.scm.org.purl.wf4ever.astrotaverna\:astrotaverna-plugin.empty=true
